--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,17 +4,19 @@
     <h2>Active Listings</h2>
 
     {% for auction in auctions %}
-        <div class="auction" style="border: 3px solid black; margin: 10px;">
-            <img src="{{ auction.image }}" alt="auction image" width="200">
-            <ul>
-                <li>
-                    <h5>{{auction.name}}</h5>
-                </li>
-                <li>
-                    Price: {{auction.bid}}€
-                </li>
-            </ul>
-        </div>
+            <a href="{% url 'listing' auction_id=auction.id %}">    
+                <div class="auction" style="border: 3px solid black; margin: 10px;">
+                    <img src="{{ auction.image }}" alt="auction image" width="200">
+                    <ul>
+                        <li>
+                            <h5>{{auction.name}}</h5>
+                        </li>
+                        <li>
+                            Price: {{auction.bid}}€
+                        </li>
+                    </ul>
+                </div>
+            </a>
         {% empty %}
             <h5>No items</h5>
     {% endfor %}
