--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -6,16 +6,17 @@
     {{auction.description}}
     <h4>{{auction.bid}}€</h2>
     
-    {% if user.is_authenticated %}
-        <form action="{% url 'listing' auction_id=auction.id %}" method="POST">
-            {% csrf_token %}
-            <input type="submit" name="watchlist" value="Add to watchlist">
-        </form>
-    {% endif %}
+        
+        {% if not is_in_watchlist %}
+            <a href="{% url 'addListing' auction_id=auction.id %}">
+                Add to watchlist
+            </a>
+        {% endif %}
+            
 
     <h5>Details</h5>
     <ul>
         <li>Listed by: {{auction.name}} </li>
-        <li>Category: {{auction.category}} </li>
+        <li>Category: {{auction.category}} <h5>Mirar de arreglar esto</h5> </li> 
     </ul>
 {% endblock %}
