--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -6,15 +6,18 @@
     {{auction.description}}
     <h4>{{auction.bid}}€</h2>
     
-        {% if display %}
-            <a href="{% url 'watchlist' auction_id=auction.id %}">
-                Add to watchlist
-            </a>
-        {% else %}
-            <a href="{% url 'watchlist' auction_id=auction.id %}">
-                Remove from watchlist
-            </a>
-        {% endif %}
+        <form action="{% url 'watchlist' auction_id=auction.id %}" method="POST">
+            {% csrf_token %}
+
+            {% if display %}
+                <input type="submit" value="Add to watchlist">
+                <input type="hidden" name="watchlist" value="add">
+            {% else %}
+                <input type="submit" value="Remove from watchlist">
+                <input type="hidden" name="watchlist" value="remove">
+            {% endif %}
+        </form>
+        
         
         {{bid}}
         
