--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -1,32 +1,10 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/index.html" %}
 
-{% block body %}
-    <h2>Select Category</h2>
 
-    <form action="{% url 'category' cat='home'%}" method="POST">
+    {% block form%}
+    <form action="{% url 'category' cat='post'%}" method="POST">
         {% csrf_token %}
         {{form}}
         <input type="submit" value="search">
     </form>
-
-    {% for auction in auctions %}
-            <a href="{% url 'listing' auction_id=auction.id %}">    
-                <div class="auction" style="border: 3px solid black; margin: 10px;">
-                    <img src="{{ auction.image }}" alt="auction image" width="200">
-                    <ul>
-                        <li>
-                            <h5>{{auction.name}}</h5>
-                        </li>
-                        <li>
-                            Price: {{auction.bid}}€
-                        </li>
-                    </ul>
-                </div>
-            </a>
-        {% empty %}
-            <h5>No items</h5>
-    {% endfor %}
-    
-    
-    
-{% endblock %}
+    {% endblock %}
