--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -43,4 +43,24 @@
         <li>Listed by: {{auction.user}} </li>
         <li>Category: {{ auction.get_category_display }} </li> 
     </ul>
+
+    <form action="{% url 'comment' auction.id %}" method="POST">
+        {% csrf_token %}
+        {{comment}}
+        <input type="submit" value="Comment">
+    </form>
+
+    <ul>
+        {% for c in comments %}
+            <li>
+                <ul>
+                    <li>{{c.date}}</li>
+                    <li>{{c.user}}</li>
+                </ul>
+                {{c.comment}}
+            </li>
+        {% endfor%}
+    </ul>
+    
+
 {% endblock %}
