--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user_watchlist' %}">Watchlist</a>
+                </li>
                 <li>
                     <a class="nav-link" href="{% url 'create' %}"> Create Listing</a>
                 </li>
